Updating README and schemeNumber lib.

--- a/client/index.html
+++ b/client/index.html
@@ -72,6 +72,7 @@
 	    <p><span class="ui-icon ui-icon-alert" style="float: left; margin: 0 7px 20px 0;"></span>StudyCentric is not a certified Medical Device and is not to be used for any clinical or diagnostic purposes. It is for research only.</p>
 	</div>
   <!-- JavaScript at the bottom for fast page loading -->
+  <script src="js/libs/biginteger.js"></script>
   <script src="js/libs/schemeNumber.js"></script>
   <script src="js/libs/raphael-min.js"></script>
   <script data-main="js/main" src="js/libs/require.js"></script>
