Popup window when no study supplied.

--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,11 @@
 	<div id="dialog-confirm" title="Research Use Only" style="display:none;">
 	    <p><span class="ui-icon ui-icon-alert" style="float: left; margin: 0 7px 20px 0;"></span>StudyCentric is not a certified Medical Device and is not to be used for any clinical or diagnostic purposes. It is for research only.</p>
 	</div>
+
+	<div id="dialog-rapidview" title="Enter Studies To View" style="display:none;">
+	    <p><span class="ui-icon ui-icon-circle-check" style="float: left; margin: 0 7px 20px 0;"></span>Please enter a comma separated list of DICOM studies you would like ot view</p>
+        <textarea placeholder="1.23.23423.43534.1.1.234, 1.343.23234234324.23422343" cols=45 rows=10></textarea>
+	</div>
   <!-- JavaScript at the bottom for fast page loading -->
   <script src="js/libs/biginteger.js"></script>
   <script src="js/libs/schemeNumber.js"></script>
