--- a/client/index.html
+++ b/client/index.html
@@ -10,29 +10,27 @@
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
   <title>StudyCentric</title>
   <meta name="description" content="StudyCentric DICOM Viewer">
-  <meta name="author" content="Jeff Miller">
-
-  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-
-  <!-- CSS: implied media="all" -->
-  <link rel="stylesheet" href="css/style.css?v=2">
-  <link rel="stylesheet" href="css/button-styles.css?v=2">
-  <link rel="stylesheet" href="css/Aristo/jquery-ui-1.8.7.custom.css">
-
-  <!-- Uncomment if you are specifically targeting less enabled mobile browsers
-  <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
+  <meta name="author" content="CBMi">
 </head>
 
 <body scroll="no" style="overflow:hidden;">
+    <script>
+        var STATIC_URL = "";
+        function getCSS(path){
+             var head  = document.getElementsByTagName('head')[0];
+             var link  = document.createElement('link');
+             link.rel  = 'stylesheet';
+             link.type = 'text/css';
+             link.href = STATIC_URL+path;
+             link.media = 'all';
+             head.appendChild(link);
+        }
+       getCSS("css/style.css?v=2");
+       getCSS("css/button-styles.css?v=2");
+       getCSS("css/Aristo/jquery-ui-1.8.7.custom.css");
+    </script>
     <div id="header" style="z-index:10">
     <h2 id="study_description"></h2>
         <div id="toolbar">
@@ -71,14 +69,17 @@
 	<div id="dialog-confirm" title="Research Use Only" style="display:none;">
 	    <p><span class="ui-icon ui-icon-alert" style="float: left; margin: 0 7px 20px 0;"></span>StudyCentric is not a certified Medical Device and is not to be used for any clinical or diagnostic purposes. It is for research only.</p>
 	</div>
-  <!-- JavaScript at the bottom for fast page loading -->
-  <script src="js/libs/biginteger.js"></script>
-  <script src="js/libs/schemeNumber.js"></script>
-  <script src="js/libs/raphael-min.js"></script>
+  <script>
+      (function(d, script) {
+        script = d.createElement('script');
+        script.type = 'text/javascript';
+        script.async = true;
+        script.src = STATIC_ROOT+'js/libs/require.js';
+        script.setAttribute('data-main', STATIC_URL+'js/main');
+        d.getElementsByTagName('head')[0].appendChild(script);
+       }(document));
+  </script>
   <script data-main="js/main" src="js/libs/require.js"></script>
-
-  <!-- scripts concatenated and minified via ant build script-->
-  <script src="js/plugins.js"></script>
 
   <!-- _ templates-->
   <script id="seriesview" type="text/jst">
