--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 
 <body scroll="no" style="overflow:hidden;">
     <script>
-        var STATIC_URL = "";
+        var STATIC_URL = window.location.pathname+"/";
         function getCSS(path){
              var head  = document.getElementsByTagName('head')[0];
              var link  = document.createElement('link');
@@ -26,7 +26,7 @@
              link.href = STATIC_URL+path;
              link.media = 'all';
              head.appendChild(link);
-        }
+       }
        getCSS("css/style.css?v=2");
        getCSS("css/button-styles.css?v=2");
        getCSS("css/Aristo/jquery-ui-1.8.7.custom.css");
